--- a/app/src/main/res/values/period_options.xml
+++ b/app/src/main/res/values/period_options.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="period_options">
+        <item>Все время</item>
         <item>День</item>
         <item>Неделя</item>
         <item>Месяц</item>
